<?xml version="1.0"?>
<package format="2">
  <name>dvs_renderer</name>
  <version>0.0.0</version>
  <description>The dvs_renderer package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/dvs_renderer_nodelet.xml"/>
  </export>
</package>
